# AMRaCut

./: CMakeLists.txt  Doxyfile  README.md  amracut.cppcheck  compile.sh
include/: CMakeLists.txt  amracut.h.in
src/: CMakeLists.txt  amracut.cpp  dgraph.cpp  dgraph.hpp  octree.cpp  octree.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  compile.sh  main.c
test-octree/: CMakeLists.txt  compile.sh  main.c
